Fix lists not become 100% width when on mobile
There was an issue on production where the list module were not changing
to fill the complete width of page when the width was reduced.

It turns out that we had column code knocking around in a few places in
our scss codebase. I have collapsed them down to one set of styling
columns shared between the homepage and modules.

--- a/styles/common/columns.scss
+++ b/styles/common/columns.scss
@@ -9,6 +9,11 @@
     margin-left: 30px / 960px * 100%;
   }
 
+  #content section.module.cols2 {
+    width: 480px / 960px * 100%;
+    margin-left: 0;
+  }
+
   .cols2:first-of-type,
   #content section.cols2:first-of-type,
   #content article.cols2:first-of-type {
