--- a/styles/common/list.scss
+++ b/styles/common/list.scss
@@ -28,15 +28,3 @@
   }
 
 }
-
-@include media(desktop) {
-  #content .list.cols2 {
-    width: 480px / 960px * 100%;
-    margin-left: 0;
-    float: left;
-    clear: none;
-    margin-right: 0;
-    padding-right: 20px / 960px * 100%;
-  }
-}
-
